# pandoc-acro

./: .gitattributes  .gitignore  LICENSE.rst  MANIFEST.in  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
doc/: Makefile  api.rst  changelog.rst  conf.py  contributing.rst  index.rst  rationale.rst
doc/_static/: custom.css
doc/_templates/: page.html  post.html
docs/: api.html  api.rst  changelog.html  conf.py  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  rationale.html  rationale.rst  search.html  searchindex.js  todo.html
docs/_sources/: changelog.rst.txt  contributing.rst.txt  todo.rst.txt
docs/_static/: custom.css  kpruss.css  variables.css
docs/html/: api.html  changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  rationale.html  search.html
docsrc/: changelog.rst  contributing.rst  index.rst
githooks/: pre-push-build-sphinx.py
pandocacro/: __init__.py  keys.py  list.py  options.py  pandocacro.py  translate.py
tests/: __init__.py  endings_example.md  endings_metadata.yaml  example.md  header-includes.yaml  header.py  latex.py  markdown.py  metadata.yaml  test.latex  test_get_key.py  test_header.py  test_latex.py  test_markdown.py  test_options.py  test_pandocacro.py  test_printacronyms.py  test_quotes.py  test_starred.py  test_styles.py
