[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.rst

[mypy]
[mypy-nox]
ignore_missing_imports = True

[mypy-panflute]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True
