[metadata]
name = pandoc-acro
version = 0.9.5
author = Keith F. Prussing
author_email = kprussing74@gmail.com
description = Pandoc filter for managing acronyms
long_description = file: README.rst
long_description_content_type = text/x-rst
license_files = LICENSE.rst
url = https://github.com/kprussing/pandoc-acro
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Other Audience
    Topic :: Documentation
    Topic :: Text Processing :: Filters
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
keywords =
    pandoc
    filter
    acronyms

[options]
packages: pandocacro
python_requires = >=3.6, <4
install_requires =
    panflute>=2.0
zip_safe = True

[options.entry_points]
console_scripts =
    pandoc-acro = pandocacro:main

[build_sphinx]
project = Pandoc Acronym Filter

[mypy]
[mypy-nox]
ignore_missing_imports = True

[mypy-panflute]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True
